# Aether

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
assets/: test.ae
include/: ast.hpp  codegen.hpp  compiler.h  compiler.hpp  errors.hpp  keywords.h  keywords.hpp  lexer.h  lexer.hpp  parser.h  parser.hpp  token.h  token.hpp  validation.hpp
src/: ast.cpp  codegen.cpp  compiler.cpp  errors.cpp  lexer.cpp  main.cpp  parser.cpp  token.cpp  validation.cpp
tests/: test_errors.cpp  test_lexer.cpp  test_token.cpp  test_validation.cpp
